==> silabs-MikeG/BG24-SWSD004/smtc_hal/SiLabs/EFR32BG24/src/smtc_hal_rtc.c <==
#include <time.h>
#include <math.h>
#include "smtc_hal.h"
#include "smtc_hal_rtc_ex.h"
#include "sl_sleeptimer.h"
#include "em_burtc.h"
#include "em_cmu.h"
#include "smtc_modem_hal_dbg_trace.h"
#define DIVC( X, N ) ( ( ( X ) + ( N ) -1 ) / ( N ) )
#define MIN_ALARM_DELAY_IN_TICKS 3000U  // in ticks
#define N_PREDIV_S 15U
#define PREDIV_S ( ( 1U << N_PREDIV_S ) - 1U )
#define PREDIV_A ( ( 1U << ( 15U - N_PREDIV_S ) ) - 1U )
#define ALARM_SUBSECOND_MASK ( N_PREDIV_S << RTC_ALRMASSR_MASKSS_Pos )
#define USEC_NUMBER 1000000U
#define MSEC_NUMBER ( USEC_NUMBER / 1000 )
#define COMMON_FACTOR 3U
#define CONV_NUMER ( MSEC_NUMBER >> COMMON_FACTOR )
#define CONV_DENOM ( 1U << ( N_PREDIV_S - COMMON_FACTOR ) )
#define DAYS_IN_LEAP_YEAR ( ( uint32_t ) 366U )
#define DAYS_IN_YEAR ( ( uint32_t ) 365U )
#define SECONDS_IN_1DAY ( ( uint32_t ) 86400U )
#define SECONDS_IN_1HOUR ( ( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE ( ( uint32_t ) 60U )
#define MINUTES_IN_1HOUR ( ( uint32_t ) 60U )
#define HOURS_IN_1DAY ( ( uint32_t ) 24U )
#define DAYS_IN_MONTH_CORRECTION_NORM ( ( uint32_t ) 0x99AAA0 )
#define DAYS_IN_MONTH_CORRECTION_LEAP ( ( uint32_t ) 0x445550 )

void hal_rtc_init( void )
{


  sl_sleeptimer_date_t date;

  date.year = 0;
  date.month = MONTH_JANUARY;
  date.month_day = 1;  //day of month, 1-31
  date.day_of_week = DAY_MONDAY;
  date.day_of_year = 1;
  date.time_zone = 0;    ///< Offset, in seconds, from UTC

  date.sec = 0;                                ///< Second (0-59)
  date.min = 0;                                ///< Minute of month (0-59)
  date.hour = 0;

  sl_sleeptimer_set_datetime (&date);
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "rtc Init\n");
#endif
  //    hal_rtc_set_time_ref_in_ticks( );
}

void hal_rtc_stop_alarm( void )
{
  /* Disable the Alarm A interrupt */
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "hal_rtc_stop_alarm\n");
#endif
  sl_sleeptimer_stop_timer(&handleRtcTimer);
}

void hal_rtc_start_alarm( uint32_t timeout )
{
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "hal_rtc_start_alarm, timeout %d\n", timeout);
#endif
  sl_sleeptimer_start_timer(&handleRtcTimer, timeout, rtcAlarmCallback, NULL, 0, 0);
//  uint16_t        rtc_alarm_sub_seconds = 0;
//  uint16_t        rtc_alarm_seconds     = 0;
//  uint16_t        rtc_alarm_minutes     = 0;
//  uint16_t        rtc_alarm_hours       = 0;
//  uint16_t        rtc_alarm_days        = 0;
//  RTC_TimeTypeDef time                  = hal_rtc.context.calendar_time;  // rtc_timer_context.calendar_time;
//  RTC_DateTypeDef date                  = hal_rtc.context.calendar_date;
//
//  hal_rtc_stop_alarm( );
//
//  /* reverse counter */
//  rtc_alarm_sub_seconds = PREDIV_S - time.SubSeconds;
//  rtc_alarm_sub_seconds += ( timeout & PREDIV_S );
//  /* convert timeout  to seconds */
//  timeout >>= N_PREDIV_S;
//
//  /* Convert microsecs to RTC format and add to 'Now' */
//  rtc_alarm_days = date.Date;
//  while( timeout >= SECONDS_IN_1DAY )
//    {
//      timeout -= SECONDS_IN_1DAY;
//      rtc_alarm_days++;
//    }
//
//  /* Calc hours */
//  rtc_alarm_hours = time.Hours;
//  while( timeout >= SECONDS_IN_1HOUR )
//    {
//      timeout -= SECONDS_IN_1HOUR;
//      rtc_alarm_hours++;
//    }
//
//  /* Calc minutes */
//  rtc_alarm_minutes = time.Minutes;
//  while( timeout >= SECONDS_IN_1MINUTE )
//    {
//      timeout -= SECONDS_IN_1MINUTE;
//      rtc_alarm_minutes++;
//    }
//
//  /* Calc seconds */
//  rtc_alarm_seconds = time.Seconds + timeout;
//
//  /***** Correct for modulo *********/
//  while( rtc_alarm_sub_seconds >= ( PREDIV_S + 1 ) )
//    {
//      rtc_alarm_sub_seconds -= ( PREDIV_S + 1 );
//      rtc_alarm_seconds++;
//    }
//
//  while( rtc_alarm_seconds >= SECONDS_IN_1MINUTE )
//    {
//      rtc_alarm_seconds -= SECONDS_IN_1MINUTE;
//      rtc_alarm_minutes++;
//    }
//
//  while( rtc_alarm_minutes >= MINUTES_IN_1HOUR )
//    {
//      rtc_alarm_minutes -= MINUTES_IN_1HOUR;
//      rtc_alarm_hours++;
//    }
//
//  while( rtc_alarm_hours >= HOURS_IN_1DAY )
//    {
//      rtc_alarm_hours -= HOURS_IN_1DAY;
//      rtc_alarm_days++;
//    }
//
//  if( date.Year % 4 == 0 )
//    {
//      if( rtc_alarm_days > days_in_month_leap_year[date.Month - 1] )
//        {
//          rtc_alarm_days = rtc_alarm_days % days_in_month_leap_year[date.Month - 1];
//        }
//    }
//  else
//    {
//      if( rtc_alarm_days > days_in_month[date.Month - 1] )
//        {
//          rtc_alarm_days = rtc_alarm_days % days_in_month[date.Month - 1];
//        }
//    }
//
//  /* Set RTC_AlarmStructure with calculated values */
//  rtc_alarm.AlarmTime.SubSeconds     = PREDIV_S - rtc_alarm_sub_seconds;
//  rtc_alarm.AlarmSubSecondMask       = ALARM_SUBSECOND_MASK;
//  rtc_alarm.AlarmTime.Seconds        = rtc_alarm_seconds;
//  rtc_alarm.AlarmTime.Minutes        = rtc_alarm_minutes;
//  rtc_alarm.AlarmTime.Hours          = rtc_alarm_hours;
//  rtc_alarm.AlarmDateWeekDay         = ( uint8_t ) rtc_alarm_days;
//  rtc_alarm.AlarmTime.TimeFormat     = time.TimeFormat;
//  rtc_alarm.AlarmDateWeekDaySel      = RTC_ALARMDATEWEEKDAYSEL_DATE;
//  rtc_alarm.AlarmMask                = RTC_ALARMMASK_NONE;
//  rtc_alarm.Alarm                    = RTC_ALARM_A;
//  rtc_alarm.AlarmTime.DayLightSaving = RTC_DAYLIGHTSAVING_NONE;
//  rtc_alarm.AlarmTime.StoreOperation = RTC_STOREOPERATION_RESET;
//
//  /* Set RTC_Alarm */
//  HAL_RTC_SetAlarm_IT( &hal_rtc.handle, &rtc_alarm, RTC_FORMAT_BIN );
}

uint32_t hal_rtc_get_timer_elapsed_value( void )
{
  uint32_t timestamp_value = ( uint32_t ) sl_sleeptimer_get_tick_count64( );
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "hal_rtc_get_timer_elapsed_value\n");
#endif
  return ( ( uint32_t )( timestamp_value - hal_rtc.context.time_ref_in_ticks ) );
}

void hal_rtc_delay_in_ms( const uint32_t milliseconds )
{
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "hal_rtc_delay_in_ms\n");
#endif
  sl_sleeptimer_delay_millisecond(milliseconds);
}

void hal_rtc_wakeup_timer_set_ms( const int32_t milliseconds )
{
  uint32_t delay_ms_2_tick = sl_sleeptimer_ms_to_tick( milliseconds );
//
//  HAL_RTCEx_DeactivateWakeUpTimer( &hal_rtc.handle );
//  /* reset irq status */
//  wut_timer_irq_happened = false;
//  HAL_RTCEx_SetWakeUpTimer_IT( &hal_rtc.handle, delay_ms_2_tick, RTC_WAKEUPCLOCK_RTCCLK_DIV16 );
#ifdef DEBUG_HAL_RTC
  SMTC_MODEM_HAL_TRACE_WARNING( "hal_rtc_wakeup_timer_set_ms, delay %d ms\n",milliseconds);
#endif
  sl_sleeptimer_start_timer(&handleRtcWakeupTimer, delay_ms_2_tick, wakeUpTimerCallback, NULL, 0, 0);
}

static uint32_t hal_rtc_get_calendar_time( uint16_t* milliseconds_div_10 )
{
//  RTC_TimeTypeDef time;
//  RTC_DateTypeDef date;
  uint32_t        ticks, milliseconds;

  uint64_t timestamp_in_ticks = sl_sleeptimer_get_tick_count64();

  sl_sleeptimer_tick64_to_ms (timestamp_in_ticks, &milliseconds);

  uint32_t seconds = ( uint32_t )( milliseconds / 1000 );

  ticks = ( uint32_t ) timestamp_in_ticks & PREDIV_S;

  *milliseconds_div_10 = hal_rtc_tick_2_100_us( ticks );

  return seconds;
}
