==> Lora-net/SWSD003/smtc_hal/STMicroelectronics/STM32L4xx/src/smtc_hal_rtc.c <==
#include <time.h>
#include <math.h>
#include "smtc_hal.h"
#include "stm32l4xx_hal.h"
#include "stm32l4xx_ll_rtc.h"
#define DIVC( X, N ) ( ( ( X ) + ( N ) -1 ) / ( N ) )
#define MIN_ALARM_DELAY_IN_TICKS 3U  // in ticks
#define N_PREDIV_S 10U
#define PREDIV_S ( ( 1U << N_PREDIV_S ) - 1U )
#define PREDIV_A ( ( 1U << ( 15U - N_PREDIV_S ) ) - 1U )
#define ALARM_SUBSECOND_MASK ( N_PREDIV_S << RTC_ALRMASSR_MASKSS_Pos )
#define USEC_NUMBER 1000000U
#define MSEC_NUMBER ( USEC_NUMBER / 1000 )
#define COMMON_FACTOR 3U
#define CONV_NUMER ( MSEC_NUMBER >> COMMON_FACTOR )
#define CONV_DENOM ( 1U << ( N_PREDIV_S - COMMON_FACTOR ) )
#define DAYS_IN_LEAP_YEAR ( ( uint32_t ) 366U )
#define DAYS_IN_YEAR ( ( uint32_t ) 365U )
#define SECONDS_IN_1DAY ( ( uint32_t ) 86400U )
#define SECONDS_IN_1HOUR ( ( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE ( ( uint32_t ) 60U )
#define MINUTES_IN_1HOUR ( ( uint32_t ) 60U )
#define HOURS_IN_1DAY ( ( uint32_t ) 24U )
#define DAYS_IN_MONTH_CORRECTION_NORM ( ( uint32_t ) 0x99AAA0 )
#define DAYS_IN_MONTH_CORRECTION_LEAP ( ( uint32_t ) 0x445550 )

void hal_rtc_init( void )
{
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;

    hal_rtc.handle.Instance            = RTC;
    hal_rtc.handle.Init.HourFormat     = RTC_HOURFORMAT_24;
    hal_rtc.handle.Init.AsynchPrediv   = PREDIV_A;
    hal_rtc.handle.Init.SynchPrediv    = PREDIV_S;
    hal_rtc.handle.Init.OutPut         = RTC_OUTPUT_DISABLE;
    hal_rtc.handle.Init.OutPutRemap    = RTC_OUTPUT_REMAP_NONE;
    hal_rtc.handle.Init.OutPutPolarity = RTC_OUTPUT_POLARITY_HIGH;
    hal_rtc.handle.Init.OutPutType     = RTC_OUTPUT_TYPE_OPENDRAIN;

    if( HAL_RTC_Init( &hal_rtc.handle ) != HAL_OK )
    {
        mcu_panic( );
    }

    /* Initialize RTC counter to 0 */
    date.Year    = 0;
    date.Month   = RTC_MONTH_JANUARY;
    date.Date    = 1;
    date.WeekDay = RTC_WEEKDAY_MONDAY;
    HAL_RTC_SetDate( &hal_rtc.handle, &date, RTC_FORMAT_BIN );

    /*at 0:0:0*/
    time.Hours          = 0;
    time.Minutes        = 0;
    time.Seconds        = 0;
    time.SubSeconds     = 0;
    time.TimeFormat     = 0;
    time.StoreOperation = RTC_DAYLIGHTSAVING_NONE;
    time.DayLightSaving = RTC_STOREOPERATION_RESET;
    HAL_RTC_SetTime( &hal_rtc.handle, &time, RTC_FORMAT_BIN );

    /* Enable Direct Read of the calendar registers (not through Shadow
       registers) */
    HAL_RTCEx_EnableBypassShadow( &hal_rtc.handle );

    HAL_NVIC_SetPriority( RTC_Alarm_IRQn, 1, 0 );
    HAL_NVIC_EnableIRQ( RTC_Alarm_IRQn );

    /* Init alarm. */
    HAL_RTC_DeactivateAlarm( &hal_rtc.handle, RTC_ALARM_A );

    hal_rtc_set_time_ref_in_ticks( );
}

void hal_rtc_stop_alarm( void )
{
    /* Disable the Alarm A interrupt */
    HAL_RTC_DeactivateAlarm( &hal_rtc.handle, RTC_ALARM_A );

    /* Clear RTC Alarm Flag */
    __HAL_RTC_ALARM_CLEAR_FLAG( &hal_rtc.handle, RTC_FLAG_ALRAF );

    /* Clear the EXTI's line Flag for RTC Alarm */
    __HAL_RTC_ALARM_EXTI_CLEAR_FLAG( );
}

void hal_rtc_start_alarm( uint32_t timeout )
{
    uint16_t        rtc_alarm_sub_seconds = 0;
    uint16_t        rtc_alarm_seconds     = 0;
    uint16_t        rtc_alarm_minutes     = 0;
    uint16_t        rtc_alarm_hours       = 0;
    uint16_t        rtc_alarm_days        = 0;
    RTC_TimeTypeDef time                  = hal_rtc.context.calendar_time;  // rtc_timer_context.calendar_time;
    RTC_DateTypeDef date                  = hal_rtc.context.calendar_date;

    hal_rtc_stop_alarm( );

    /*reverse counter */
    rtc_alarm_sub_seconds = PREDIV_S - time.SubSeconds;
    rtc_alarm_sub_seconds += ( timeout & PREDIV_S );
    /* convert timeout  to seconds */
    timeout >>= N_PREDIV_S;

    /* Convert microsecs to RTC format and add to 'Now' */
    rtc_alarm_days = date.Date;
    while( timeout >= SECONDS_IN_1DAY )
    {
        timeout -= SECONDS_IN_1DAY;
        rtc_alarm_days++;
    }

    /* Calc hours */
    rtc_alarm_hours = time.Hours;
    while( timeout >= SECONDS_IN_1HOUR )
    {
        timeout -= SECONDS_IN_1HOUR;
        rtc_alarm_hours++;
    }

    /* Calc minutes */
    rtc_alarm_minutes = time.Minutes;
    while( timeout >= SECONDS_IN_1MINUTE )
    {
        timeout -= SECONDS_IN_1MINUTE;
        rtc_alarm_minutes++;
    }

    /* Calc seconds */
    rtc_alarm_seconds = time.Seconds + timeout;

    /***** Correct for modulo*********/
    while( rtc_alarm_sub_seconds >= ( PREDIV_S + 1 ) )
    {
        rtc_alarm_sub_seconds -= ( PREDIV_S + 1 );
        rtc_alarm_seconds++;
    }

    while( rtc_alarm_seconds >= SECONDS_IN_1MINUTE )
    {
        rtc_alarm_seconds -= SECONDS_IN_1MINUTE;
        rtc_alarm_minutes++;
    }

    while( rtc_alarm_minutes >= MINUTES_IN_1HOUR )
    {
        rtc_alarm_minutes -= MINUTES_IN_1HOUR;
        rtc_alarm_hours++;
    }

    while( rtc_alarm_hours >= HOURS_IN_1DAY )
    {
        rtc_alarm_hours -= HOURS_IN_1DAY;
        rtc_alarm_days++;
    }

    if( date.Year % 4 == 0 )
    {
        if( rtc_alarm_days > days_in_month_leap_year[date.Month - 1] )
        {
            rtc_alarm_days = rtc_alarm_days % days_in_month_leap_year[date.Month - 1];
        }
    }
    else
    {
        if( rtc_alarm_days > days_in_month[date.Month - 1] )
        {
            rtc_alarm_days = rtc_alarm_days % days_in_month[date.Month - 1];
        }
    }

    /* Set RTC_AlarmStructure with calculated values */
    rtc_alarm.AlarmTime.SubSeconds     = PREDIV_S - rtc_alarm_sub_seconds;
    rtc_alarm.AlarmSubSecondMask       = ALARM_SUBSECOND_MASK;
    rtc_alarm.AlarmTime.Seconds        = rtc_alarm_seconds;
    rtc_alarm.AlarmTime.Minutes        = rtc_alarm_minutes;
    rtc_alarm.AlarmTime.Hours          = rtc_alarm_hours;
    rtc_alarm.AlarmDateWeekDay         = ( uint8_t ) rtc_alarm_days;
    rtc_alarm.AlarmTime.TimeFormat     = time.TimeFormat;
    rtc_alarm.AlarmDateWeekDaySel      = RTC_ALARMDATEWEEKDAYSEL_DATE;
    rtc_alarm.AlarmMask                = RTC_ALARMMASK_NONE;
    rtc_alarm.Alarm                    = RTC_ALARM_A;
    rtc_alarm.AlarmTime.DayLightSaving = RTC_DAYLIGHTSAVING_NONE;
    rtc_alarm.AlarmTime.StoreOperation = RTC_STOREOPERATION_RESET;

    /* Set RTC_Alarm */
    HAL_RTC_SetAlarm_IT( &hal_rtc.handle, &rtc_alarm, RTC_FORMAT_BIN );
}

uint32_t hal_rtc_get_timer_elapsed_value( void )
{
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;

    uint32_t timestamp_value = ( uint32_t ) rtc_get_timestamp_in_ticks( &date, &time );

    return ( ( uint32_t )( timestamp_value - hal_rtc.context.time_ref_in_ticks ) );
}

void hal_rtc_delay_in_ms( const uint32_t milliseconds )
{
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;

    uint64_t delay_in_ticks     = 0;
    uint64_t ref_delay_in_ticks = rtc_get_timestamp_in_ticks( &date, &time );

    delay_in_ticks = hal_rtc_ms_2_tick( milliseconds );

    /* Wait delay ms */
    while( ( ( rtc_get_timestamp_in_ticks( &date, &time ) - ref_delay_in_ticks ) ) < delay_in_ticks )
    {
        __NOP( );
    }
}

void hal_rtc_wakeup_timer_set_ms( const int32_t milliseconds )
{
    uint32_t delay_ms_2_tick = hal_rtc_ms_2_wakeup_timer_tick( milliseconds );

    HAL_RTCEx_DeactivateWakeUpTimer( &hal_rtc.handle );
    // reset irq status
    wut_timer_irq_happened = false;
    HAL_RTCEx_SetWakeUpTimer_IT( &hal_rtc.handle, delay_ms_2_tick, RTC_WAKEUPCLOCK_RTCCLK_DIV16 );
}

static uint32_t hal_rtc_get_calendar_time( uint16_t* milliseconds )
{
    RTC_TimeTypeDef time;
    RTC_DateTypeDef date;
    uint32_t        ticks;

    uint64_t timestamp_in_ticks = rtc_get_timestamp_in_ticks( &date, &time );

    uint32_t seconds = ( uint32_t )( timestamp_in_ticks >> N_PREDIV_S );

    ticks = ( uint32_t ) timestamp_in_ticks & PREDIV_S;

    *milliseconds = hal_rtc_tick_2_ms( ticks );

    return seconds;
}
